--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
 		<li class ="separator">|</li>
         <li><%= link_to "Vitamina L", vitamins_path %></li>
         <li class ="separator">|</li>
-		<li><%= link_to "Club de Lectores", "#" %></li>
+		<li><%= link_to "Club de Lectores", forum_categories_path %></li>
         <li class ="separator">|</li>
 		<li><%= link_to "Quienes Somos", static_path("quienes-somos") %></li>
         <li class ="separator">|</li>
