--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -452,3 +452,11 @@ a.view-more {
 #trade-info #received-book {width: 48%;}
 
 #trade-info #grade {width: 80%; margin: 20px auto; text-align: center;}
+
+
+
+/* ######################################## CLUB DE LECTORES (FORUMS) */
+.foro-cat {margin-bottom: 25px;}
+.foro-title {background: #666 url(/images/layout/forum-cat-bg.png) no-repeat 15px 35px; color: #FFF; height: 30px;}
+.foro-title a {color: #FFF;}
+.thread {padding-bottom: 8px; border-bottom: 1px solid #DDD;}
