--- a/app/views/forum_categories/_forum_category.html.erb
+++ b/app/views/forum_categories/_forum_category.html.erb
@@ -1,28 +1,9 @@
 <div class="foro-cat">
-  <h2 class="foro-title"><%= forum_category.name %></h2>
+  <h2 class="foro-title"><%= link_to forum_category.name, forum_category %></h2>
   
   <div class="threads">
     
-    <div class="thread">
-      <h4 class="thread-title">
-        <%= link_to "¿Cuál es el mejor cuento para un niño?", 'javascript:void(0)' %> <br />
-        <span> <%= link_to '24 Comentarios', 'javascript:void(0)'%> </span>
-      </h4>
-      
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    </div>
-    <!-- End of div.thread -->
-    
-    
-    <div class="thread">
-      <h4 class="thread-title">
-        <%= link_to "¿Cuál es el mejor cuento para un niño?", 'javascript:void(0)' %> <br />
-        <span> <%= link_to '24 Comentarios', 'javascript:void(0)'%> </span>
-      </h4>
-      
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    </div>
-    <!-- End of div.thread -->
+    <%= render forum_category.forum_threads %>
     
   </div>
   <!-- End of div.threads -->
