--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
 
 
 <div class="left avatar">
-  <%= image_tag @user.avatar.url %>
+  <%= image_tag @user.avatar.url(:big) %>
 </div>
 
 <div class="rleft">
