--- a/app/views/forum_threads/_form.html.erb
+++ b/app/views/forum_threads/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @forum_thread do |f| %>
+<%= form_for [@category, @forum_thread] do |f| %>
   <%= f.error_messages %>
   <p>
     <%= f.label :title %><br />
@@ -7,10 +7,6 @@
   <p>
     <%= f.label :body %><br />
     <%= f.text_area :body %>
-  </p>
-  <p>
-    <%= f.label :forum_category_id %><br />
-    <%= f.text_field :forum_category_id %>
   </p>
   <p><%= f.submit %></p>
 <% end %>
