--- a/app/views/forum_threads/new.html.erb
+++ b/app/views/forum_threads/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form' %>
 
-<p><%= link_to "Back to List", forum_threads_path %></p>
+<p><%= link_to "Back to List", forum_categories_path %></p>
