--- a/app/views/forum_categories/new.html.erb
+++ b/app/views/forum_categories/new.html.erb
@@ -1,5 +1,4 @@
-<% title "New Forum Category" %>
+<% title "Crear categoría para el club de lectores" %>
 
 <%= render 'form' %>
 
-<p><%= link_to "Back to List", forum_categories_path %></p>
