--- a/app/views/forum_categories/show.html.erb
+++ b/app/views/forum_categories/show.html.erb
@@ -14,7 +14,7 @@
   <% end %>
   
   <% if can? :index, ForumCategory %>
-    <%= link_to "Volver al club de lectores", books_path %>
+    <%= link_to "Volver al club de lectores", forum_categories_path %>
   <% end %>
 </div>
 
