--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
         <li class ="separator">|</li>
 		<li><%= link_to "Quienes Somos", static_path("quienes-somos") %></li>
         <li class ="separator">|</li>
-		<li><%= link_to "Contacto", "#" %></li>
+		<li><%= link_to "Contacto", contact_forms_path %></li>
       </ul>
       <%= clear %>
     </div> <!-- End of nav-menu div -->
