--- a/app/views/forum_threads/_form.html.erb
+++ b/app/views/forum_threads/_form.html.erb
@@ -2,11 +2,11 @@
   <%= f.error_messages %>
   <p>
     <%= f.label :title %><br />
-    <%= f.text_field :title %>
+    <%= f.text_field :title, :size => 80 %>
   </p>
   <p>
     <%= f.label :body %><br />
-    <%= f.text_area :body %>
+    <%= f.text_area :body, :size => "90x15" %>
   </p>
   <p><%= f.submit %></p>
 <% end %>
