--- a/app/views/forum_threads/edit.html.erb
+++ b/app/views/forum_threads/edit.html.erb
@@ -1,8 +1,19 @@
-<% title "Edit Forum Thread" %>
+<% title "Editando #{@forum_thread.title}" %>
 
-<%= render 'form' %>
+<%= form_for @forum_thread do |f| %>
+  <%= f.error_messages %>
+  <p>
+    <%= f.label :title %><br />
+    <%= f.text_field :title, :size => 80 %>
+  </p>
+  <p>
+    <%= f.label :body %><br />
+    <%= f.text_area :body, :size => "90x15" %>
+  </p>
+  <p><%= f.submit %></p>
+<% end %>
+
 
 <p>
-  <%= link_to "Show", @forum_thread %> |
-  <%= link_to "View All", forum_threads_path %>
+  <%= link_to "Volver al hilo sin guardar", @forum_thread %>
 </p>
