--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,49 +5,47 @@
     <%= "#{yield(:title)} | Trueque Literario EAFIT" %>
   </title>
   <%= stylesheet_link_tag "jquery.ui", "nivo.slider", "application" %>
-  <%= javascript_include_tag :defaults, "nested_form", "rails.validations.js" %>
+  <%= javascript_include_tag :defaults, "nested_form", "rails.validations", "rails.validations.custom", "jquery.columns" %>
   <%= csrf_meta_tag %>
   <%= yield(:head) %>
-  
+
   <%= render "shared/google_analytics" %>
-  
+
 </head>
 <body>
-  
+
   <div id="container">
 
     <div id= "header">
       <div id="logo">
         <%= link_to "E Truque - Biblioteca Universidad EAFIT", root_url %>
       </div>
-      <div id= "search">
-		 
-      </div>
+
     </div> <!-- End of header div -->
 
     <div id= "nav-menu">
       <ul>
         <li><%= link_to "Inicio", root_path %></li>
-		<li class ="separator">|</li>
+        <li class ="separator">|</li>
         <li><%= link_to "Libros Disponibles", books_path %></li>
-		<li class ="separator">|</li>
+        <li class ="separator">|</li>
         <li><%= link_to "Vitamina L", vitamins_path %></li>
         <li class ="separator">|</li>
-		<li><%= link_to "Club de Lectores", forum_categories_path %></li>
+        <li><%= link_to "Club de Lectores", forum_categories_path %></li>
         <li class ="separator">|</li>
-		<li><%= link_to "Quienes Somos", static_path("quienes-somos") %></li>
+        <li><%= link_to "Quienes Somos", static_path("quienes-somos") %></li>
         <li class ="separator">|</li>
-		<li><%= link_to "Contacto", contact_forms_path %></li>
+        <li><%= link_to "Contacto", contact_forms_path %></li>
       </ul>
       <%= clear %>
     </div> <!-- End of nav-menu div -->
 
-    <% if  content_for?(:subheader) %>
+    <% if content_for?(:subheader) %>
       <%= yield(:subheader) %>
     <% end %>
 
     <div class="left sidebar">
-      <% if  content_for?(:sidebar) %>
+      <% if content_for?(:sidebar) %>
         <%= yield(:sidebar) %>
       <% else %>
         <%= render :partial => "shared/sidebar" %>
@@ -58,18 +56,15 @@
 
     <div id="main-content">
       <% if content_for?(:title) and show_title? %>
-        <h1><%= yield(:title) %></h1>
+      <h1><%= yield(:title) %></h1>
       <% end %>
-      
+
       <% flash.each do |name, msg| %>
-        <%= content_tag :div, msg, :id => "flash_#{name}", :class => "alert" %>
+      <%= content_tag :div, msg, :id => "flash_#{name}", :class => "alert" %>
       <% end %>
-      
-      <%= clear %>
-      
+
       <%= yield %>
-      
-      <%= clear %>
+
     </div>
     <!-- End of main-content -->
     <%= clear %>
@@ -117,8 +112,8 @@
     <div class="slider"><%= image_tag 'ajax-loader.gif' %></div>
     <div class="contentWrap"> </div>
   </div>
-  
+
   <!-- Powered by Zinergia -->
-  
+
 </body>
 </html>
