Adding more info to contact form

--- a/app/views/contact_forms/index.html.erb
+++ b/app/views/contact_forms/index.html.erb
@@ -18,5 +18,22 @@
 </dl>
 <%= clear %>
 <p><%= f.submit "Enviar" %></p>
-<%= clear %>
-<% end %>    
+<% end %>
+
+<h1>Centro Cultural Biblioteca Luis Echavarría Villegas</h1>
+
+<p>
+  Carrera 49 No. 7 Sur-50 - Avenida Las Vegas <br />
+  Teléfono: (57) (4) 261 95 00 extensión 9261 <br />
+  Fax: (57) (4) 266 42 84 <br />
+  AA: 3300
+</p>
+
+<h3>Horario regular</h3>
+
+<p>
+  Lunes a Viernes: 7:00 a.m. a 9:00 p.m. jornada continua. <br />
+  Sábados: 8:00 a.m. a 4:00 p.m. jornada continua. <br />
+  Sala Patrimonial: Lunes a viernes de 8:00 a.m. a 12:00 m. y de 2:00 p.m. a 6:00 p.m.
+</p>
+
