--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,8 +4,8 @@
   <title>
     <%= "#{yield(:title)} | Trueque Literario EAFIT" %>
   </title>
-  <%= stylesheet_link_tag "jquery.ui", "nivo.slider", "application" %>
-  <%= javascript_include_tag :defaults, "nested_form", "rails.validations", "rails.validations.custom", "jquery.columns" %>
+  <%= stylesheet_link_tag "jquery.ui", "nivo.slider", "application", "formalize" %>
+  <%= javascript_include_tag :defaults, "nested_form", "rails.validations", "rails.validations.custom", "jquery.columns", "jquery.formalize" %>
   <%= csrf_meta_tag %>
   <%= yield(:head) %>
 
