--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <%= "#{yield(:title)} | Trueque Literario EAFIT" %>
   </title>
   <%= stylesheet_link_tag "jquery.ui", "nivo.slider", "application", "formalize" %>
-  <%= javascript_include_tag :defaults, "nested_form", "rails.validations", "rails.validations.custom", "jquery.columns", "jquery.formalize" %>
+  <%= javascript_include_tag :defaults, "nested_form", "rails.validations", "rails.validations.custom", "jquery.columns", "jquery.formalize.min" %>
   <%= csrf_meta_tag %>
   <%= yield(:head) %>
 
