--- a/app/views/navigation/site_index.html.erb
+++ b/app/views/navigation/site_index.html.erb
@@ -71,7 +71,7 @@
     <h1>Últimos libros</h1>
     <div class="books">
       <% for book in @latest_books %>
-        <%= render :partial => "books/book_small", :locals => {:book_small => book} %>
+        <%= render "books/book_small", :book_small => book %>
       <% end %>
     </div>
   </div>
@@ -82,7 +82,7 @@
     <h1>Libros de La Esquina del Trueque</h1>
     <div class="books">
       <% for book in @best_books %>
-      <%= render :partial => "books/book_small", :locals => {:book_small => book} %>
+        <%= render "books/book_small", :book_small => book %>
       <% end %>
     </div>
   </div>
