--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,46 +1,64 @@
-<% title "Perfil de #{@user.name}" %>
+<% title "Perfil de #{@user.name}", false %>
+
+<div class="actions" style="margin-top: 35px;">
+  <% if can? :edit, @user %>
+    <%= link_to "Editar perfil", edit_user_path(@user) %>
+  <% end %>
+  
+  <% if can? :destroy, @user %>
+    | <%= link_to "Eliminar libro", @user, :confirm => '¿Está seguro?', :method => :delete %> | 
+  <% end %>
+  
+  <% if can? :index, User %>
+    <%= link_to "Ver todos los usuarios", users_path %>
+  <% end %>
+</div>
 
 
+<div id="profile">
+  
+</div>
 
 <div class="left avatar">
   <%= image_tag @user.avatar.url(:big) %>
 </div>
 
 <div class="rleft">
-  <h2><%= @user.name %></h2>
+  <h2>Nombre</h2>
+  <h1><%= @user.name %></h1>
   <% if @user.webpage? %>
     <span class="small"> &lt; <%= @user.webpage %> &gt; </span>
   <% end %>
+
+  <%= profile_section_if_present(@user.age, "Edad") %>
+  <%= profile_section_if_present(@user.actual_book, "Libro Actual") %>
+  <%= profile_section_if_present(@user.ocupation, "Ocupación") %>
 </div>
 
 <%= clear %>
 
-<p>
-  <strong>Name:</strong>
-  <%= @user.name %>
-</p>
+<% if @user.hobbies.present? %>
+  <h2>Acerca de mi</h2>
+  <%= simple_format @user.hobbies %>
+<% end %>
 
-<p>
-  <strong>Age:</strong>
-  <%= @user.age %>
-</p>
-<p>
-  <strong>Sex:</strong>
-  <%= @user.sex %>
-</p>
-<p>
-  <strong>Ocupation:</strong>
-  <%= @user.ocupation %>
-</p>
-<p>
-  <strong>Hobbies:</strong>
-  <%= @user.hobbies %>
-</p>
-<p>
-  <strong>Actual Book:</strong>
-  <%= @user.actual_book %>
-</p>
+<%= clear %>
 
+<% if @books.any? %>
+<h1>Libros disponibles de <%= @user.name %></h1>
+<% for book in @books %>
+  <%= render "books/book_small", :book_small => book %>
+<% end %>
+<%= clear %>
+<% end %>
+
+
+<% if @waiting_books.any? %>
+  <h1>Libros que espera <%= @user.name %></h1>
+  <% for book in @waiting_books %>
+    <%= render "books/book_small", :book_small => book %>
+  <% end %>
+<% end %>
 
 <%= clear %>
 
