--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -459,8 +459,11 @@ a.view-more {
 .small-profile div#avatar         { width: 100px; margin: 0 auto; text-align: center; margin-bottom: 15px;}
 .small-profile div#login_list     { width: 100%; margin-bottom: 15px; text-align: center;}
 
-
-
+/* ######################################## BIG PROFILE Users#Show STYLES */
+#profile .rleft {min-height: 200px;}
+#profile .rleft h2 {margin: 0;}
+#profile .rleft h1 {margin-top: 0;}
+#profile .profile-section {margin-top: 25px;}
 /* ######################################## COMMENTS LIST AND FORM STYLES */
 #create-comment {margin-top: 20px;}
 .comment {margin-bottom: 15px; border-bottom: 1px solid #DDD; padding-bottom: 15px;}
