--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -6,7 +6,8 @@
   </p>
   <p>
     <%= f.label :content %><br />
-    <%= f.text_area :content %>
+    <%= f.textile_editor :content %>
   </p>
   <p><%= f.submit %></p>
+  <%= textile_editor_initialize(:framework => :jquery) %>
 <% end %>
