--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -1,8 +1,3 @@
-<% title "Edit Page" %>
+<% title "Editando Página: #{@page.name}" %>
 
 <%= render 'form' %>
-
-<p>
-  <%= link_to "Show", @page %> |
-  <%= link_to "View All", pages_path %>
-</p>
