Always show first and last icons on pagination

--- a/app/views/kaminari/_first_page.html.erb
+++ b/app/views/kaminari/_first_page.html.erb
@@ -6,6 +6,14 @@
     per_page:      number of items to fetch per page
     remote:        data-remote
 -%>
-<span class="first">
-  <%= link_to_unless current_page.first?, raw(t 'views.pagination.first'), url, :remote => remote %>
-</span>
+<% if current_page.first? %>
+  <span class="first disabled">
+    <%= raw(t 'views.pagination.first') %>
+  </span>
+<% else %>
+  <span class="first">
+    <%= link_to raw(t 'views.pagination.first'), url, :remote => remote %>
+  </span>
+<% end %>
+
+
