--- a/app/views/kaminari/_last_page.html.erb
+++ b/app/views/kaminari/_last_page.html.erb
@@ -6,6 +6,14 @@
     per_page:      number of items to fetch per page
     remote:        data-remote
 -%>
-<span class="last">
-  <%= link_to_unless current_page.last?, raw(t 'views.pagination.last'), url, {:remote => remote} %>
-</span>
+<% if current_page.last? %>
+  <span class="last disable">
+    <%= raw(t 'views.pagination.last') %>
+  </span>
+<% else %>
+  <span class="last">
+    <%= link_to raw(t 'views.pagination.last'), url, {:remote => remote} %>
+  </span>
+<% end %>
+
+
