User#index styles

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,16 +1,5 @@
-<% title "Todos los usuarios" %>
+<% title "Lista de usuarios" %>
 
-  <div id="todos-usuarios">
-    <ul>
-      <% for user in @users %>
-        <li id="user-list">
-          <div class="left avatar"><%= image_tag user.avatar.url %></div>
-            <div class="rleft">
-              <p><h2><%= user.name %></h2></p>
-              <%= link_to "Ver perfil", user %>
-            </div>
-          <%= clear %>
-        </li>
-      <% end %>
-    </ul>
-  </div>
+<div id="todos-usuarios">
+  <%= render @users %>
+</div>
