--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -469,7 +469,7 @@ a.view-more {
 .small-profile div#login_list     { width: 100%; margin-bottom: 15px; text-align: center;}
 
 /* ######################################## USER LIST Users#index STYLES */
-.user {float: left; margin-right: 25px; width: 40%;}
+.user {float: left; margin-right: 25px; width: 40%; margin-bottom: 20px;}
 
 /* ######################################## BIG PROFILE Users#Show STYLES */
 #profile .rleft {min-height: 200px;}
