--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -468,6 +468,12 @@ a.view-more {
 .small-profile div#avatar         { width: 100px; margin: 0 auto; text-align: center; margin-bottom: 15px;}
 .small-profile div#login_list     { width: 100%; margin-bottom: 15px; text-align: center;}
 
+
+
+#otros-usuarios li {
+  padding-bottom: 5px; border-bottom: 1px solid #999; margin-bottom: 8px;
+}
+
 /* ######################################## USER LIST Users#index STYLES */
 .user {float: left; margin-right: 25px; width: 40%; margin-bottom: 20px;}
 
@@ -476,6 +482,7 @@ a.view-more {
 #profile .rleft h2 {margin: 0;}
 #profile .rleft h1 {margin-top: 0;}
 #profile .profile-section {margin-top: 25px;}
+
 /* ######################################## COMMENTS LIST AND FORM STYLES */
 #create-comment {margin-top: 20px;}
 .comment {margin-bottom: 15px; border-bottom: 1px solid #DDD; padding-bottom: 15px;}
