Transaltions on users form and fixing admin menu

--- a/app/views/admin/_menu.html.erb
+++ b/app/views/admin/_menu.html.erb
@@ -2,3 +2,4 @@
   <li><%= link_to "Admin. Páginas", pages_path %></li>
   <li><%= link_to "Admin. Banners", banners_path %></li>
 </ul>
+<%= clear %>
