--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,3 @@
-<% title "New User" %>
+<% title "Formulario de registro" %>
 
 <%= render 'form' %>
-
-<p><%= link_to "Back to List", users_path %></p>
