Use a select form instead of a text field for user sex

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -60,7 +60,7 @@
 
 	<p>
     <%= f.label "Sexo" %><br />
-    <%= f.text_field :sex, :size => 30 %>
+    <%= f.select :sex, [["Mujer", "Mujer"], ["Hombre", "Hombre"]] %>
   </p>
 
  </div>
